# helios

./: .env.example  Dockerfile  README.md  UPGRADE_SUMMARY.md  docker-compose.yml  main.py  pyproject.toml  requirements-clean.txt  requirements.txt  run_backtest.py
.github/workflows/: ci.yml
config/: __init__.py  redis.conf  settings.py  strategy.yaml
core/: engine.py  events.py  performance.py  portfolio.py
data/: feeder.py  processor.py  storage.py
execution/: alpaca_broker.py  broker_base.py  paper_broker.py
k8s/: configmap.yaml  deployment.yaml  service.yaml
risk/: manager.py
scripts/: init-db.sql  quick_check.py  setup.py  validate_repo.py
strategies/: base.py  mean_reversion.py  momentum_breakout.py  trend_following.py
tests/: test_backtest_engine.py  test_momentum_breakout.py  test_risk_manager.py  test_trend_following.py
utils/: __init__.py  db.py  health.py  logger.py  redis_queue.py  sentinel.py  slack.py
workers/: tasks.py
